syntax = "proto3";

package greetings;

option go_package = "github.com/andriesniemandt/go-grpc/greetings/proto";

message GreetingRequest {
  string first_name = 1;
}

message GreetingResponse {
  string result = 1;
}

service GreetingService {
  rpc Greet (GreetingRequest) returns (GreetingResponse);
}